--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 386,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "\n",
-    "# File to Load (Remember to Change These)\n",
+    "# File to Load\n",
     "school_data_to_load = \"Resources/schools_complete.csv\"\n",
     "student_data_to_load = \"Resources/students_complete.csv\"\n",
     "\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -247,22 +247,32 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 387,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We find all the information required to build the table\n",
+    "#(1) We find all the information required to build the table\n",
+    "\n",
+    "#Total Schools = We count the number of unique values under the school column. i.e. the names of the schools included in this dataset.\n",
     "Total_Schools = len(school_data_complete[\"school_name\"].unique())\n",
+    "#Total Students = We count the number of students in the dataset. \n",
     "Total_Students = school_data_complete[\"student_name\"].count()\n",
+    "#Total Budget = We sum the budgets of each school by choosing to sum ONLY the unique values.\n",
     "Total_Budget = sum(school_data_complete[\"budget\"].unique())\n",
+    "#We find the average of math scores for all students in the dataset.\n",
     "Average_Math_Score = school_data_complete[\"math_score\"].mean()\n",
+    "#We find the average of reading scores for all students in the dataset.\n",
     "Average_Reading_Score = school_data_complete[\"reading_score\"].mean()\n",
+    "#We create a list of students that ONLY got a math score of >=70 and count the number of students in this list. Then we divide by the total number of students.\n",
     "Percentage_Passing_Math = school_data_complete.loc[school_data_complete[\"math_score\"] >=70, \"math_score\"].count() / Total_Students*100\n",
+    "#We create a list of students that ONLY got a reading score of >=70 and count the number of students in this list. Then we divide by the total number of students.\n",
     "Percentage_Passing_Reading = school_data_complete.loc[school_data_complete[\"reading_score\"] >=70, \"reading_score\"].count() / Total_Students*100\n",
+    "#We create a list of students that ONLY got a reading AND math score of >=70 and count the number of students in this list. Then we divide by the total number of students.\n",
     "Percentage_Passing_Overall = school_data_complete.loc[(school_data_complete[\"reading_score\"] >=70) & (school_data_complete[\"math_score\"] >=70), \"reading_score\"].count() / Total_Students*100\n",
-    "#We build the data frame / table\n",
+    "\n",
+    "#(2) We build the data frame with the values found in (1)\n",
     "District_Summary = pd.DataFrame({\"Total Schools\" : [Total_Schools],\n",
     "                                 \"Total Students\" : [Total_Students],\n",
     "                                 \"Total Budget\" : [Total_Budget],\n",
@@ -272,12 +282,13 @@
     "                                 \"% Passing Reading\" : [Percentage_Passing_Reading],\n",
     "                                 \"% Overall Passing\" : [Percentage_Passing_Overall]\n",
     "                                })\n",
-    "#We make the format edits requested as per the sample\n",
+    "\n",
+    "#(3) We make the format edits requested as per the sample\n",
     "District_Summary[\"Total Students\"] = District_Summary[\"Total Students\"].map(\"{:,}\".format)\n",
     "District_Summary[\"Total Budget\"] = District_Summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
     "District_Summary[\"Average Math Score\"] = District_Summary[\"Average Math Score\"].map(\"{:.6f}\".format)\n",
     "\n",
-    "#Final version of the table\n",
+    "#(4) Final version of the table\n",
     "District_Summary\n"
    ]
   },
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -599,31 +610,47 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 388,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#(1) We add a few columns to the original dataset that we will use to evaluate the data.\n",
     "\n",
-    "\n",
+    "#This column will show TRUE if a student got >=70 in math. \n",
     "school_data_complete[\"new_math_score\"] = school_data_complete[\"math_score\"]>=70\n",
+    "#This column will show TRUE if a student got >=70 in reading.\n",
     "school_data_complete[\"new_reading_score\"] = school_data_complete[\"reading_score\"]>=70\n",
+    "#This column will show '2' if a student got >=70 in both reading and math.\n",
     "school_data_complete[\"new_overall\"] = school_data_complete[\"new_math_score\"]*1 + school_data_complete[\"new_reading_score\"]*1\n",
+    "#This column will show TRUE if a student got >=70 in both reading and math (based on the 'new_overall' column created above)\n",
     "school_data_complete[\"passed_both_subjects\"] = school_data_complete[\"new_overall\"] ==2\n",
     "\n",
+    "#(2) We find all the information required to build the table\n",
+    "\n",
+    "#We group data based on School Name.\n",
     "School_Name_Group = school_data_complete.groupby(\"school_name\")\n",
+    "#We find if a school is a 'district' or a 'charter' school.\n",
     "School_type1 = School_Name_Group[\"type\"].unique()\n",
+    "#We count the number of students that each school has enroled.\n",
     "School_students1 = School_Name_Group[\"student_name\"].count()\n",
+    "#We find the budget per school by choosing to count only the unique values.\n",
     "School_budget1 = School_Name_Group[\"budget\"].unique()\n",
+    "#We find the budget per student per school by dividing each school budget by the number of students they have.\n",
     "School_psb = pd.DataFrame(School_budget1 / School_students1)\n",
+    "#We find the average math scores per school.\n",
     "Average_Math_Score1 = School_Name_Group[\"math_score\"].mean()\n",
+    "#We find the average reading scores per school.\n",
     "Average_Reading_Score1 = School_Name_Group[\"reading_score\"].mean()\n",
+    "#'new_math_score' is a column that has True/False values. As True = 1, if we sume all the values in this column, we will find the number of students per school that passed math.We can now divide these figures by the number of students per school.\n",
     "Percentage_Passing_Math1 = pd.DataFrame(School_Name_Group[\"new_math_score\"].sum() / School_students1 *100)\n",
+    "#Same rationale as the line above. We have a column that acts as a ticker that counts the students that passed reading. We can now find the percentage of students per school that passed reading.\n",
     "Percentage_Passing_Reading1 = pd.DataFrame(School_Name_Group[\"new_reading_score\"].sum() / School_students1 *100)\n",
+    "#Same rationale as the line above. We sum the 'passed_both_subjects' column to find the number of students that passed both subjects per school. We now divide by the total number of students per school.\n",
     "Percentage_Passing_Overall1 = pd.DataFrame(School_Name_Group[\"passed_both_subjects\"].sum() / School_students1 *100)\n",
     "\n",
-    "#We create the requested table\n",
+    "#(3) We build the data frame with the values found in (2)\n",
     "School_Summary = pd.merge(School_type1, School_students1, on=\"school_name\")\n",
     "School_Summary = pd.merge(School_Summary, School_budget1,on=\"school_name\")\n",
     "School_Summary = pd.merge(School_Summary, School_psb,on=\"school_name\")\n",
@@ -633,17 +660,18 @@
     "School_Summary = pd.merge(School_Summary, Percentage_Passing_Reading1,on=\"school_name\")\n",
     "School_Summary = pd.merge(School_Summary, Percentage_Passing_Overall1,on=\"school_name\")\n",
     "\n",
-    "#We modify the title of each column as required: \n",
+    "# (4) We modify the title of each column as per the sample:\n",
     "School_Summary.columns = [\"School Type\", \"Total Students\", \"Total School Budget\", \"Per Student Budget\", \"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
     "School_Summary.index.name = None\n",
     "\n",
-    "#Edit format of values\n",
+    "#(5) We make the format edits requested as per the sample:\n",
     "School_Summary[\"School Type\"] = School_Summary[\"School Type\"].str[0]\n",
     "School_Summary[\"Total School Budget\"] = School_Summary[\"Total School Budget\"].str[0]\n",
     "School_Summary[\"Total School Budget\"] = School_Summary[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
     "School_Summary[\"Per Student Budget\"] = School_Summary[\"Per Student Budget\"].str[0]\n",
     "School_Summary[\"Per Student Budget\"] = School_Summary[\"Per Student Budget\"].map(\"${:.2f}\".format)\n",
     "\n",
+    "#(6) Final version of the table\n",
     "School_Summary\n"
    ]
   },
@@ -663,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 436,
    "metadata": {
     "scrolled": true
    },
@@ -795,13 +823,16 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 389,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#(1) We organize the data frame found in the previous exercise based on the % of students that passed both subjects per school. The highest values values will show at the top.\n",
     "School_Summary2 = School_Summary.sort_values(\"% Overall Passing\", ascending = False)\n",
+    "\n",
+    "#(2) We are asked for the top 5 schools. Hence, we create a data frame with the first 5 columns.\n",
     "Top_Performing_Schools = School_Summary2.iloc[[0,1,2,3,4]]\n",
     "Top_Performing_Schools"
    ]
@@ -1569,25 +1600,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 431,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Length mismatch: Expected axis has 4 elements, new values have 5 elements",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-430-dbe0646ceab3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mSummary_by_School_Size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSummary_by_School_Size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPercentage_Passing_Overall_bysize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"School Size\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mSchool_Summary_Reading\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Math Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Average Reading Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Passing Math\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Passing Reading\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Overall Passing\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mSummary_by_School_Size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__setattr__\u001b[1;34m(self, name, value)\u001b[0m\n\u001b[0;32m   5285\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5286\u001b[0m             \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5287\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5288\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5289\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_set_axis\u001b[1;34m(self, axis, labels)\u001b[0m\n\u001b[0;32m    659\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    660\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_set_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 661\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    662\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_clear_item_cache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    663\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\managers.py\u001b[0m in \u001b[0;36mset_axis\u001b[1;34m(self, axis, new_labels)\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    176\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnew_len\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mold_len\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 177\u001b[1;33m             raise ValueError(\n\u001b[0m\u001b[0;32m    178\u001b[0m                 \u001b[1;34mf\"Length mismatch: Expected axis has {old_len} elements, new \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m                 \u001b[1;34mf\"values have {new_len} elements\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Length mismatch: Expected axis has 4 elements, new values have 5 elements"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.828654</td>\n",
+       "      <td>83.974082</td>\n",
+       "      <td>93.952484</td>\n",
+       "      <td>96.040317</td>\n",
+       "      <td>90.136789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-2000)</th>\n",
+       "      <td>83.372682</td>\n",
+       "      <td>83.867989</td>\n",
+       "      <td>93.616522</td>\n",
+       "      <td>96.773058</td>\n",
+       "      <td>90.624267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.477597</td>\n",
+       "      <td>81.198674</td>\n",
+       "      <td>68.652380</td>\n",
+       "      <td>82.125158</td>\n",
+       "      <td>56.574046</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.828654              83.974082       93.952484   \n",
+       "Medium (1000-2000)           83.372682              83.867989       93.616522   \n",
+       "Large (2000-5000)            77.477597              81.198674       68.652380   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.040317          90.136789  \n",
+       "Medium (1000-2000)          96.773058          90.624267  \n",
+       "Large (2000-5000)           82.125158          56.574046  "
+      ]
+     },
+     "execution_count": 431,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1608,7 +1707,7 @@
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Reading_bysize,on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Overall_bysize,on=\"School Size\")\n",
     "\n",
-    "School_Summary_Reading.columns = [\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "Summary_by_School_Size.columns = [\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
     "\n",
     "Summary_by_School_Size\n"
    ]
@@ -1732,7 +1831,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Observable trends: "
+   ]
   }
  ],
  "metadata": {
