--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1895,9 @@
     "\n",
     "#1) Based on the Scores by 'School Type' we observe that Charter schools outperform District schools in all criterias. Students in charter schools have, on average, higher grades in math and reading. Moreover, a higher % of students passes/approves the math and reading subjects in 'Charter' schools than in 'District' schools.\n",
     "#2) An interesting observation can be made based on the Scores per 'School Spending'. It looks like the schools that spend a smaller amount of their budget per student (i.e. they may have a lower budget) are the ones with a higher performance. Schools in the lowest bracket (<$584) show highest average math and reading scores, as well as a higher % of students that pass/approve these two subjects. We can also notice that all 5 indicators that were assessed consistantly decrease as the budget per student goes up. This consistant decrease in performance reinforces the idea that, for some reason, higher performance is correlated to lower budget per student in this data set. As we know, correlation does not imply causation. Hence, We need to assess other factors to explain this trend.\n",
-    "#3) From a vsiual inspection of the 'Reading Scores by Grade' and the 'Math Scores by Grade', we can observe that students perform better at Reading than at Math. We observe multiple scores below 80 on the Math table, but all scores are above 80 on the Reading table. We could infer that, on average, students are going to perform better on Reading than on Math regardless of other criteria.  "
+    "#3) From a vsiual inspection of the 'Reading Scores by Grade' and the 'Math Scores by Grade', we can observe that students perform better at Reading than at Math. We observe multiple scores below 80 on the Math table, but all scores are above 80 on the Reading table. We could infer that, on average, students are going to perform better on Reading than on Math regardless of other criteria.  \n",
+    "\n",
+    "#NOTE: Our instructor has informed us that the dataset includes a \"delimiter\" character for Github, which means that charts are not showing on Github as expected. Various students are showing this same issue. I have attached screenshots that prove that all charts show as expected in Jupyter Notebook. "
    ]
   },
   {
